new: configuration file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,12 @@ set(CMAKE_CXX_STANDARD 20)
 
 list(APPEND CMAKE_PREFIX_PATH "C:/Users/erwan/Documents/projects/cpp/lua")
 
-
 if(NOT DEFINED LUA_INCLUDE_DIR OR NOT DEFINED LUA_LIBRARIES)
     find_package(Lua 5.3 REQUIRED)
 endif()
 include_directories(${LUA_INCLUDE_DIR})
 
-add_executable(${PROJECT_NAME} main.cpp Response.cpp Response.h servlet.cpp servlet.h Request.cpp Request.h Queue.h)
+add_executable(${PROJECT_NAME} src/main.cpp src/Response.cpp src/Response.h src/servlet.cpp src/servlet.h src/Request.cpp src/Request.h src/Queue.h)
 
 target_link_libraries(${PROJECT_NAME} ${LUA_LIBRARIES})
 
@@ -20,5 +19,3 @@ find_package(Threads REQUIRED)
 
 find_package(OpenSSL REQUIRED)
 target_link_libraries(${PROJECT_NAME} OpenSSL::SSL Threads::Threads)
-
-file(COPY server DESTINATION .)
