--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ if(NOT DEFINED LUA_INCLUDE_DIR OR NOT DEFINED LUA_LIBRARIES)
 endif()
 include_directories(${LUA_INCLUDE_DIR})
 
-add_executable(${PROJECT_NAME} src/main.cpp src/Response.cpp src/Response.hpp src/servlet.cpp src/servlet.hpp src/Request.cpp src/Request.hpp src/Queue.hpp src/luaFunctions.hpp)
+add_executable(${PROJECT_NAME} src/main.cpp src/Response.cpp src/Response.hpp src/servlet.cpp src/servlet.hpp src/Request.cpp src/Request.hpp src/Queue.hpp src/luaFunctions.hpp src/luaFunctions.cpp src/socket.cpp src/socket.hpp)
 
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
