new: use json for configuration file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,12 +10,16 @@ if(NOT DEFINED LUA_INCLUDE_DIR OR NOT DEFINED LUA_LIBRARIES)
 endif()
 include_directories(${LUA_INCLUDE_DIR})
 
-add_executable(${PROJECT_NAME} src/main.cpp src/Response.cpp src/Response.hpp src/servlet.cpp src/servlet.hpp src/Request.cpp src/Request.hpp src/Queue.hpp src/luaFunctions.hpp src/luaFunctions.cpp src/socket.cpp src/socket.hpp)
+# Import thirdparty libraries
+include_directories(${PROJECT_SOURCE_DIR}/thirdparty/json/include)
+include_directories(${PROJECT_SOURCE_DIR}/thirdparty/json/external/PEGTL/include)
+add_subdirectory("thirdparty/json")
+
+file(GLOB_RECURSE CONFIGURE_DEPENDS "src/*.h" "src/*.hpp" "src/*.cpp")
+add_executable(${PROJECT_NAME} ${CONFIGURE_DEPENDS})
 
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 
 find_package(OpenSSL REQUIRED)
 target_link_libraries(${PROJECT_NAME} OpenSSL::SSL Threads::Threads ${LUA_LIBRARIES})
-
-file(COPY server.conf DESTINATION .)
