--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,11 @@ cmake_minimum_required(VERSION 3.8)
 project("WebServer")
 
 set(CMAKE_CXX_STANDARD 20)
-
-list(APPEND CMAKE_PREFIX_PATH "C:/Users/erwan/Documents/projects/cpp/lua")
-
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
 
 if(NOT DEFINED LUA_INCLUDE_DIR OR NOT DEFINED LUA_LIBRARIES)
-    find_package(Lua 5.3 REQUIRED)
+    find_package(Lua 5.4 REQUIRED)
 endif()
 include_directories(${LUA_INCLUDE_DIR})
 
@@ -19,7 +16,7 @@ include_directories(${PROJECT_SOURCE_DIR}/thirdparty/json/external/PEGTL/include
 add_subdirectory("thirdparty/json")
 
 file(GLOB_RECURSE CONFIGURE_DEPENDS "src/*.cpp")
-add_executable(${PROJECT_NAME} ${CONFIGURE_DEPENDS} "src/utils.cpp")
+add_executable(${PROJECT_NAME} ${CONFIGURE_DEPENDS})
 
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
