--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,9 @@ find_package(Threads REQUIRED)
 
 find_package(OpenSSL REQUIRED)
 target_link_libraries(${PROJECT_NAME} OpenSSL::SSL Threads::Threads ${LUA_LIBRARIES})
+
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+
+install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
