--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,20 @@
-cmake-build-*
-.idea
-.vs
-out
+### IDEs ###
+/.idea
+/.vs
+/out
+/Testing
+
+### CMake ###
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+cmake-build-*/
+.cmake
