feat: support for ssl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,17 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(web_server_reboot main.cpp
         App.cpp
         App.h
-        connections/Connection.cpp
         connections/Connection.h
         connections/SocketConnection.cpp
         connections/SocketConnection.h
         responses/Response.cpp
         responses/Response.h
         responses/Request.cpp
-        responses/Request.h)
+        responses/Request.h
+        SslHelpers.cpp
+        SslHelpers.h
+        connections/SslConnection.cpp
+        connections/SslConnection.h)
+
+find_package(OpenSSL REQUIRED)
+target_link_libraries(web_server_reboot OpenSSL::SSL)
