ci: add unit tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,31 @@
-cmake_minimum_required(VERSION 3.27)
+cmake_minimum_required(VERSION 3.22)
 project(web_server_reboot)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(web_server_reboot main.cpp
-        App.cpp
-        App.h
-        connections/Connection.h
-        connections/SocketConnection.cpp
-        connections/SocketConnection.h
-        responses/Response.cpp
-        responses/Response.h
-        responses/Request.cpp
-        responses/Request.h
-        SslHelpers.cpp
-        SslHelpers.h
-        connections/SslConnection.cpp
-        connections/SslConnection.h)
+file(GLOB_RECURSE SOURCES "src/*.cpp" "src/*.h")
+
+add_executable(web_server_reboot ${SOURCES})
 
 find_package(OpenSSL REQUIRED)
 target_link_libraries(web_server_reboot OpenSSL::SSL)
+
+
+find_package(GTest QUIET)
+if(GTest_FOUND)
+    enable_testing()
+
+    file(GLOB_RECURSE SOURCES "test/*.cpp")
+
+    add_executable(web_server_reboot_test ${SOURCES})
+
+    target_link_libraries(
+            web_server_reboot_test
+            GTest::gtest_main
+    )
+
+    include(GoogleTest)
+    gtest_discover_tests(web_server_reboot_test)
+else()
+    message(WARNING "GTest not found. Tests will not be built.")
+endif()
