--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,9 @@ set(CMAKE_CXX_STANDARD 20)
 
 file(GLOB_RECURSE SOURCES "src/*.cpp" "src/*.h")
 
-add_executable(web_server_reboot ${SOURCES})
+add_executable(web_server_reboot main.cpp ${SOURCES}
+        src/string_manipulation.cpp
+        src/string_manipulation.h)
 
 find_package(OpenSSL REQUIRED)
 target_link_libraries(web_server_reboot OpenSSL::SSL)
@@ -15,13 +17,15 @@ find_package(GTest QUIET)
 if(GTest_FOUND)
     enable_testing()
 
-    file(GLOB_RECURSE SOURCES "test/*.cpp")
+    file(GLOB_RECURSE SOURCES "test/*.cpp" "src/*.cpp" "src/*.h")
 
-    add_executable(web_server_reboot_test ${SOURCES})
+    add_executable(web_server_reboot_test ${SOURCES}
+            test/request_test.cpp)
 
     target_link_libraries(
             web_server_reboot_test
             GTest::gtest_main
+            OpenSSL::SSL
     )
 
     include(GoogleTest)
