--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install CMake
         run: |
           sudo apt update
-          sudo apt install -y cmake libgtest-dev libfmt-dev
+          sudo apt install -y cmake libgtest-dev libspdlog-dev
 
       - name: Configure and build
         run: |
