--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -2,11 +2,9 @@ name: CMake Build and Test
 
 on:
   push:
-    branches:
-      - master
+    branches: [ master ]
   pull_request:
-    branches:
-      - master
+    branches: [ master ]
 
 jobs:
   build:
